# dasgter_pipeline_lls

lls-dagster-pipeline/: README.md  pyproject.toml
lls-dagster-pipeline/api/: main.py  model_loader.py
lls-dagster-pipeline/api/static/: index.html
lls-dagster-pipeline/models/: json_model.json  json_model.weights.h5  latest_model.keras  scaler_X.pkl  scaler_y.pkl
lls-dagster-pipeline/src/lls_dagster_pipeline/: definitions.py  sensors.py
lls-dagster-pipeline/src/lls_dagster_pipeline/config/: dagster.yaml  lstm.yaml  vehicles.yaml
lls-dagster-pipeline/src/lls_dagster_pipeline/defs/: compute_data.py  eval_model.py  preprocess.py  train_model.py
lls-dagster-pipeline/src/lls_dagster_pipeline/io_managers/: numpy_io_manager.py  parquet_io_manager.py
lls-dagster-pipeline/src/lls_dagster_pipeline/resources/: area_config.py  lstm_config.py  mlflow_resource.py  vehicle_config.py
lls-dagster-pipeline/src/lls_dagster_pipeline/utils/: data_sequence.py  visualization.py
