[project]
name = "lls_dagster_pipeline"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.2",
    "fastparquet>=2024.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "lls_dagster_pipeline"
registry_modules = [
    "lls_dagster_pipeline.components.*",
]


